<resources>
    <string name="app_name">Gerenciamento de Estufa</string>
    <string name="statusTitle">Informações</string>
    <string name="actionsTitle">Configurações</string>
    <string name="historyTitle">Histórico de Informações</string>

    <!-- HOME ACTIVITY STRINGS-->

    <!-- Information Labels -->
    <string name="strOutsideTemperature">Temperatura Fora</string>
    <string name="strInsideTemperature">Temperatura Dentro</string>
    <string name="strInsideHumidity">Umidade Dentro</string>
    <string name="strOutsideHumidity">Umidade Fora</string>
    <string name="strSoilHumidity">Umidade do Solo</string>
    <string name="strSoilPh">PH do Solo</string>
    <!-- Information Values -->
    <string name="strOutsideTemperatureValue">--</string>
    <string name="strInsideTemperatureValue">--</string>
    <string name="strInsideHumidityValue">--</string>
    <string name="strOutsideHumidityValue">--</string>
    <string name="strSoilHumidityValue">--</string>
    <string name="strSoilPhValue">--</string>
    <!-- Switch Buttons Labels -->
    <string name="strLightsSwitch">Luzes</string>
    <string name="strIrrigationSwitch">Irrigação</string>
    <string name="strExhaustSwitch">Exaustor</string>


    <!-- HISTORY ACTIVITY STRINGS -->

    <!-- Table Labels -->
    <string name="strDateHeader">Data</string>
    <string name="strInsideTemperatureHeader">InºC</string>
    <string name="strOutsideTemperatureHeader">OutºC</string>
    <string name="strInsideHumidityHeader">In%</string>
    <string name="strOutsideHumidityHeader">Out%</string>
    <string name="strSoilHumidityHeader">Soil%</string>
    <string name="strSoilPhHeader">Ph</string>
    <string name="strNoData">Sem dados do servidor...</string>

</resources>
