<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2_blackest"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/statusTitle"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btnStatusHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/txtStatusTitle"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/transparent"
                    android:onClick="onHistoryButtonClicked"
                    android:src="@android:drawable/ic_menu_recent_history" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtInsideTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strInsideTemperature"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtInsideTemperatureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strInsideTemperatureValue"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtOutsideTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strOutsideTemperature"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtOutsideTemperatureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strOutsideTemperatureValue"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtInsideHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strInsideHumidity"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtInsideHumidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strInsideHumidityValue"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtOutsideHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strOutsideHumidity"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtOutsideHumidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strOutsideHumidityValue"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSoilHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strSoilHumidity"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSoilHumidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strSoilHumidityValue"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSoilPh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strSoilPh"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSoilPhValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/strSoilPhValue"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/actionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:textColor="@color/colorText">

            <TextView
                android:id="@+id/txtActionsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/actionsTitle"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Switch
                android:id="@+id/switchLights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:onClick="onSwitchCheckedChanged"
                android:text="@string/strLightsSwitch"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />

            <Switch
                android:id="@+id/switchIrrigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:layout_below="@+id/switchLights"
                android:layout_alignEnd="@+id/switchLights"
                android:layout_marginTop="5dp"
                android:onClick="onSwitchCheckedChanged"
                android:text="@string/strIrrigationSwitch"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />

            <Switch
                android:id="@+id/switchExhaust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:layout_below="@+id/switchIrrigation"
                android:layout_alignEnd="@+id/switchLights"
                android:layout_marginTop="5dp"
                android:onClick="onSwitchCheckedChanged"
                android:text="@string/strExhaustSwitch"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>