<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2_blackest"
    android:orientation="vertical"
    tools:context=".StatusHistory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtHistoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/historyTitle"
            android:textAlignment="center"
            android:textColor="@color/colorTextHistory"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/tableHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center_horizontal"
                    android:text="@string/strDateHeader"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextHistory"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center"
                    android:text="@string/strInsideHumidityHeader"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextHistory"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/strOutsideTemperatureHeader"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextHistory"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center"
                    android:text="@string/strInsideHumidityHeader"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextHistory"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center"
                    android:text="@string/strOutsideHumidityHeader"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextHistory"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center"
                    android:text="@string/strSoilHumidityHeader"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextHistory"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center"
                    android:text="@string/strSoilPhHeader"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextHistory"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/myScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <TableLayout
                android:id="@+id/tableDataLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow android:layout_width="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand"
                        android:gravity="center_vertical"
                        android:text="@string/strNoData"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextHistory"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>


            </TableLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>